--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="movies">
+        <div class="movies__logo"></div>
+        <div class="movies__banner"></div>
+
+    </header>
+    
     
 </body>
 </html>
