--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+<header>
+
+</header>
+    <section>
+
+    </section>
+    <footer class="foooter">
+<a class="footer__logo" href="index.html" target = ”_blank”>
+        <img class="footer__icon" width="30px" height="30px" src="./assets/logo/brain-logo.swg.png" alt="logo">
+        MovieBrain
+      </a>
+      <div class="contact">
+      <a class="contact__website" href="https://facebook.com" target = ”_blank”><img class="contact__icon" src="./assets/logo/facebook-icon.svg" alt="facebook"></a> 
+      <a class="contact__website" href="https://vk.com" target = ”_blank”><img class="contact__icon" width="26px" height="26px" src="./assets/logo/vk-logo.svg" alt="vk"></a>
+      <a class="contact__website" href="https://instagram.com" target = ”_blank”><img class="contact__icon" src="./assets/logo/instagram-icon.svg" alt="instagram"></a>
+    </div>
+    </footer>
 </body>
 </html>
