--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main class="movies">
+        <form class="movies__searchbar">
+            <input type="text" class="movies__searchbar-input" placeholder="Search Titles">
+            <button type="submit" class="movies__search-button">Search</button>
+        </form>
+
+    </main>
 </body>
 </html>
